Implement Java modularity
Resolves #66