@@ -19,6 +19,8 @@ ext {
     commonsRdfVersion = '0.5.0'
     javaxAnnotationsVersion = '1.3.2'
     javaxInjectVersion = '2.5.0-b62'
+    javaxJmsVersion = '2.0.1'
+    javaxManagementVersion = '1.1.2'
     jaxrsVersion = '2.1.1'
     metricsVersion = '4.0.5'
     slf4jVersion = '1.7.25'
@@ -43,6 +45,7 @@ ext {
     kafkaVersion = '2.0.0'
     mustacheVersion = '0.9.5'
     rabbitMqVersion = '5.5.2'
+    validationVersion = '2.0.1.Final'
 
     /* Testing */
     apiguardianVersion = '1.0.0'
@@ -51,6 +54,7 @@ ext {
     commonsTextVersion = '1.6'
     junitVersion = '5.3.2'
     junitLauncherVersion = '1.3.2'
+    hamcrestVersion = '2.1'
     logbackVersion = '1.2.3'
     mockitoVersion = '2.23.4'
     qpidVersion = '7.1.0'
@@ -149,8 +153,11 @@ allprojects { subproj ->
     }
 
     configurations.all {
+        exclude group: 'commons-logging', module: 'commons-logging'
         resolutionStrategy.dependencySubstitution {
             substitute module("org.apache.geronimo.specs:geronimo-annotation_1.2_spec") with module ("javax.annotation:javax.annotation-api:$javaxAnnotationsVersion")
+            substitute module("org.apache.geronimo.specs:geronimo-jms_1.1_spec") with module("javax.jms:javax.jms-api:$javaxJmsVersion")
+            substitute module("org.apache.geronimo.specs:geronimo-j2ee-management_1.1_spec") with module("javax.management.j2ee:javax.management.j2ee-api:$javaxManagementVersion")
         }
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             if (details.requested.group.startsWith('com.fasterxml.jackson.')) {
@@ -163,13 +170,79 @@ allprojects { subproj ->
 
 subprojects { subproj ->
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    def jpms = JavaVersion.current().isJava11Compatible() && subproj.hasProperty("jpms") &&
+            sourceSets.main.allJava.getFiles().stream().map { file -> file.getName() }
+                    .anyMatch { file -> file == "module-info.java"}
+
+    sourceCompatibility = jpms ? 11 : 8
+    targetCompatibility = jpms ? 11 : 8
+
+    afterEvaluate {
+        if (jpms) {
+            compileJava {
+                inputs.property("moduleName", moduleName)
+                doFirst {
+                    options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                    ]
+                    classpath = files()
+                }
+            }
+            compileTestJava {
+                inputs.property("moduleName", moduleName)
+                def mods = subproj.ext.has("testModules") ? subproj.ext.get("testModules") : []
+                mods.add('org.junit.jupiter.api')
+                doFirst {
+                    options.compilerArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', mods.join(','),
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                    ]
+                    mods.forEach { mod -> options.compilerArgs += [ '--add-reads', "$moduleName=$mod"] }
+                    classpath = files()
+                }
+            }
+            test {
+                inputs.property("moduleName", moduleName)
+                def mods = subproj.ext.has("testModules") ? subproj.ext.get("testModules") : []
+                mods.add('org.junit.jupiter.api')
+                doFirst {
+                    jvmArgs = [
+                        '--module-path', classpath.asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--add-opens', "$moduleName/$moduleName=org.junit.platform.commons",
+                        '--add-opens', "$moduleName/$moduleName=org.mockito",
+                        '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir, sourceSets.test.output).asPath,
+                    ]
+                    mods.forEach { mod -> jvmArgs += [ '--add-reads', "$moduleName=$mod"] }
+                    classpath = files()
+                }
+            }
+
+            javadoc {
+                options.addStringOption('-module-path', classpath.asPath)
+            }
+        }
+    }
+
+    sourceSets {
+        main {
+            java {
+                if (!jpms) {
+                    exclude '**/module-info.java'
+                }
+            }
+        }
+    }
 
     jar {
         from("$rootDir/LICENSE") {
             into "META-INF"
         }
+    }
+
+    test {
+        useJUnitPlatform()
     }
 
     checkstyle {
@@ -337,7 +410,7 @@ subprojects { subproj ->
             links 'https://www.dropwizard.io/1.3.5/dropwizard-core/apidocs/'
         }
 
-        if (JavaVersion.current().isJava9Compatible()) {
+        if (JavaVersion.current().isJava11Compatible()) {
             options.addBooleanOption('html5', true)
         }
     }
@@ -347,17 +420,13 @@ subprojects { subproj ->
                 "implSpec:a:Implementation Requirements:",
                 "implNote:a:Implementation Note:"]
 
-        if (JavaVersion.current().isJava9Compatible()) {
+        if (JavaVersion.current().isJava11Compatible()) {
             options.addBooleanOption('html5', true)
         }
     }
 
     sonarqube {
         skipProject = JavaVersion.current().isJava10Compatible()
-    }
-
-    test {
-        useJUnitPlatform()
     }
 
     afterReleaseBuild.dependsOn docs
